--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,10 +1,10 @@
-include hoc/*.mod
-include hoc/*.hoc
+include src/hoc/*.mod
+include src/hoc/*.hoc
 include test/*tests.py
 include test/brunel.py
-include test/*Pcsim*.py
 include test/simpleNetwork*.py
 include test/VAbenchmarks.py
 include test/IF_curr_*.py
 include test/small_network.py
+include doc/*.txt
 
