Minor changes to `setup.py` and the documentation.
git-svn-id: https://neuralensemble.org/svn/PyNN/branches/0.4@345 1a7b9c28-352d-0410-8541-c879d6df8dcf

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,4 +7,6 @@ include test/VAbenchmarks.py
 include test/IF_curr_*.py
 include test/small_network.py
 include doc/*.txt
+include COPYING
+include changelog
 
