--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,11 +1,8 @@
 include src/hoc/*.mod
-include src/hoc/*.hoc
+include test/parameters/*
 include test/*tests.py
-include test/brunel.py
-include test/simpleNetwork*.py
-include test/VAbenchmarks.py
-include test/IF_curr_*.py
-include test/small_network.py
+include test/unittests/*.py
+include examples/*.py
 include doc/*.txt
 include COPYING
 include changelog
