Deleted some files that should not be part of the 0.6 branch
git-svn-id: https://neuralensemble.org/svn/PyNN/branches/0.6@710 1a7b9c28-352d-0410-8541-c879d6df8dcf

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include src/hoc/*.mod
-include test/parameters/*
-include test/*tests.py
+include test/system/*.py
+include test/system/parameters/*
+include test/regression/*.py
 include test/unittests/*.py
 include examples/*.py
 include doc/*.txt
