--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include src/neuron/nmodl/*.mod
+include src/descriptions/templates/*/*.txt
 include test/parameters/*
 include test/system/*.py
 include test/unittests/*.py
