renamed COPYING to LICENSE
git-svn-id: https://neuralensemble.org/svn/PyNN/trunk@958 1a7b9c28-352d-0410-8541-c879d6df8dcf

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,6 +5,7 @@ include test/system/*.py
 include test/unittests/*.py
 include examples/*.py
 include doc/*.txt
-include COPYING
+include LICENSE
+include AUTHORS
 include changelog
 
