--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 Jinja2>=2
-Sphinx>=1.1
-distribute>=0.6.31
 docutils>=0.10
 mock>1.0
 numpy>=1.5
 quantities>=0.10
 lazyarray>=0.2.2
-neo>0.2.1
+neo>=0.3
