--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt --use-mirrors
+  - pip install . --use-mirrors
 # command to run tests, e.g. python setup.py test
-script:  nosetests
+script:  nosetests -w test/unittests
