--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install:
   - pip install -r requirements.txt --use-mirrors
   - pip install . --use-mirrors
 # command to run tests, e.g. python setup.py test
-script:  nosetests -w test/unittests
+script:  nosetests -w test/unittests -c test/unittests/setup.cfg
