--- a/.gitignore
+++ b/.gitignore
@@ -23,13 +23,16 @@ i686
 # Python files
 build
 dist
+MANIFEST
 doc/_build
 doc/images/examples
+doc/examples/*.txt
 # Egg metadata
 *.egg-info
 *.egg
 *.EGG
 *.EGG-INFO
+*.pkl
 
 # OS generated files
 .directory
