--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "2.6"
   - "3.3"
   - "3.4"
+sudo: false
 # command to install dependencies
 install:
   - pip install -r requirements.txt --use-mirrors
