--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ addons:
       - autoconf
       - automake
       - libtool
-      - libltdl7-dev
       - libreadline6-dev
       - libncurses5-dev
       - libgsl0-dev
@@ -26,4 +25,7 @@ install:
   - pip install .
 # command to run tests, e.g. python setup.py test
 script:  bash ci/test_script.sh
-cache: apt
+cache:
+  directories:
+    - $HOME/build/nest-2.6.0
+    - $HOME/.cache/pip
