Added scipy as dependency for Travis (needed for Brian)

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ addons:
       - libgsl0-dev
       - python-all-dev
       - python-numpy
+      - python-scipy
       - python-sympy
       - openmpi-bin
       - libopenmpi-dev
