--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,8 @@ addons:
       - libopenmpi-dev
 install:
   - pip install -r requirements.txt
-  - pip install brian
   - pip install coverage coveralls
+  - source ci/install_brian.sh
   - source ci/install_nest.sh
   - source ci/install_neuron.sh
   - pip install .
