updated nineml-related code and examples to match new version of lib9ML

--- a/.gitignore
+++ b/.gitignore
@@ -45,8 +45,9 @@ Thumbs.db
 cover
 
 # files from running examples
-examples/Results
-examples/tools/Results
+/examples/Results
+/examples/tools/Results
+/examples/nineml_mechanisms
 
 # Other
 *.btr
