--- a/.gitignore
+++ b/.gitignore
@@ -45,9 +45,9 @@ Thumbs.db
 cover
 
 # files from running examples
-/examples/Results
-/examples/tools/Results
-/examples/nineml_mechanisms
+examples/Results
+examples/tools/Results
+examples/nineml_mechanisms
 
 # Other
 *.btr
