--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ addons:
       - python-sympy
       - openmpi-bin
       - libopenmpi-dev
+      - cmake
 install:
   - pip install -r requirements.txt
   - pip install coverage coveralls
