--- a/.travis.yml
+++ b/.travis.yml
@@ -1,40 +1,25 @@
 language: python
-python:
-  - 2.6
-  - 3.3
-  - 3.5
-  - "2.7_with_system_site_packages"
-sudo: false
-addons:
-  apt:
-    packages:
-      - build-essential
-      - autoconf
-      - automake
-      - libtool
-      - libreadline6-dev
-      - libncurses5-dev
-      - libgsl0-dev
-      - python-all-dev
-      - python-numpy
-      - python-scipy
-      - python-sympy
-      - openmpi-bin
-      - libopenmpi-dev
+dist: trusty
+sudo: required
+matrix:
+    include:
+        - python: 2.6
+          env: PYENV=py26
+        - python: 2.7
+          env: PYENV=py27
+        - python: 3.3
+          env: PYENV=py33
+        - python: 3.5
+          env: PYENV=py35
 install:
-  - pip install -r requirements.txt
-  - pip install coverage coveralls
-  - source ci/install_brian.sh
-  - source ci/install_nest.sh
-  - source ci/install_neuron.sh
-  - pip install .
+    - source ci/install.sh
 script:  bash ci/test_script.sh
 after_success:
   - coveralls
 cache:
   directories:
-    - $HOME/nest-2.6.0
-    - $HOME/nrn-7.3
-    - $HOME/build/nest-2.6.0
-    - $HOME/build/nrn-7.3
+    - $HOME/nest-2.10.0
+    - $HOME/nrn-7.4
+    - $HOME/build/nest-2.10.0
+    - $HOME/build/nrn-7.4
     - $HOME/.cache/pip
