--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,12 @@ matrix:
 install:
     - source ci/install.sh
 script:  bash ci/test_script.sh
-#after_success:
-#  - coveralls
+after_success:
+  - coveralls
+cache:
+  directories:
+    - $HOME/nest-2.10.0
+    - $HOME/nrn-7.4
+    - $HOME/build/nest-2.10.0
+    - $HOME/build/nrn-7.4
+    - $HOME/.cache/pip
