Initial NeuroML test file

--- a/.gitignore
+++ b/.gitignore
@@ -70,4 +70,5 @@ examples/*.svg
 /examples/Potjans2014/*.pov
 /examples/Potjans2014/*main.json
 /examples/Potjans2014/*.so
-
+/test/system/LEMS_Sim_Test0.xml
+/test/system/Test0.net.nml
