--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
   - "2.6"
 # command to install dependencies
 install:
-  - pip install -r requirements.txt --use-mirrors
-  - pip install . --use-mirrors
+  - pip install -r requirements.txt
+  - pip install .
 # command to run tests, e.g. python setup.py test
 script:  nosetests -w test/unittests
