--- a/doc/Makefile
+++ b/doc/Makefile
@@ -14,6 +14,11 @@ help:
 
 .PHONY: help Makefile
 
+zip:
+	cd $(BUILDDIR); zip -r pyNN_docs.zip html; cd ..
+	@echo
+	@echo "Packaging finished. The zip file is in $(BUILDDIR)/pyNN_docs.zip."
+
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
