--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ after_success:
   - coveralls
 cache:
   directories:
-    - $HOME/nest-master
+    - $HOME/nest-2.12.0
     - $HOME/nrn-7.4
-    - $HOME/build/nest-master
+    - $HOME/build/nest-2.12.0
     - $HOME/build/nrn-7.4
     - $HOME/.cache/pip
