--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 Jinja2>=2.6
 docutils>=0.10
 mock>1.0
-numpy>=1.5
-#quantities>=0.10
-git+https://github.com/python-quantities/python-quantities.git
+numpy>=1.8.2
+quantities>=0.12.1
 lazyarray>=0.2.10
 neo>=0.5
