--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,42 @@
 language: python
 dist: trusty
 sudo: required
-matrix:
-    include:
-        - python: 2.7
-          env: PYENV=py27
-        - python: 3.4
-          env: PYENV=py34
+python:
+    - 2.7
+    - 3.3
+    - 3.4
+    - 3.5
+
+before_install:
+   - pip install -U pip
+   - pip install -U setuptools
+   - pip install coverage coveralls
+   - pip install nose-testconfig cython
+   - sudo apt-get update && sudo apt-get install -qq libgsl0-dev openmpi-bin libopenmpi-dev python-all-dev build-essential
+   - pip install -r requirements.txt
+
 install:
-    - source ci/install.sh
-script:  bash ci/test_script.sh
+   - which cython
+   - cython --version
+   - which python
+   - python --version
+   - which pip
+   - which nosetests
+   - nosetests --version
+   - nosetests --plugins
+   - which cmake
+   - cmake --version
+
+before_script:
+    - chmod +x ci/*.sh
+
+script:
+    - ./ci/install.sh
+    - ./ci/test_script.sh
+
 after_success:
   - coveralls
+
 cache:
   directories:
     - $HOME/nest-2.14.0
