--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,11 @@ before_install:
    - pip install -U pip
    - pip install -U setuptools
    - pip install coverage coveralls
-   - pip install nose-testconfig cython
+   - pip install nose-testconfig
    - sudo apt-get update && sudo apt-get install -qq libgsl0-dev openmpi-bin libopenmpi-dev python-all-dev build-essential
    - pip install -r requirements.txt
 
 install:
-   - which cython
-   - cython --version
    - which python
    - python --version
    - which pip
@@ -31,8 +29,7 @@ before_script:
     - chmod +x ci/*.sh
 
 script:
-    - ./ci/install.sh
-    - ./ci/test_script.sh
+    - ./ci/install.sh && ./ci/test_script.sh
 
 after_success:
   - coveralls
