--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ numpy>=1.8.2
 quantities>=0.12.1
 lazyarray>=0.3.2
 neo>=0.5.2
-libNeuroML
+git+https://github.com/NeuralEnsemble/libNeuroML@development#egg=libneuroml
