Test on bionic rather than trusty

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,17 @@
 language: python
-dist: trusty
-sudo: required
+dist: bionic
 matrix:
-    include:
-        - python: 2.7
-          env: PYENV=py27
-        - python: 3.5
-          env: PYENV=py35
-        - python: 3.8
-          env: PYENV=py38
+  include:
+    - python: 2.7
+      env: PYENV=py27
+    - python: 3.6
+      env: PYENV=py36
+    - python: 3.8
+      env: PYENV=py38
+before_install:
+  - sudo apt-get install -y libgsl0-dev  openmpi-bin libopenmpi-dev
 install:
-    - source ci/install.sh
+  - source ci/install.sh
 script:  bash ci/test_script.sh
 after_success:
   - coveralls
