--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ matrix:
     - python: 3.8
       env: PYENV=py38
 before_install:
-  - sudo apt-get install -y libgsl0-dev  openmpi-bin libopenmpi-dev
+  - sudo apt-get install -y libgsl0-dev  openmpi-bin libopenmpi-dev python-dev
 install:
   - source ci/install.sh
 script:  bash ci/test_script.sh
