--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - source ci/install.sh
 script:  bash ci/test_script.sh
 after_success:
-  - test $PYENV = "py37" && coveralls
+  - bash ci/upload_coveralls.sh
 cache:
   directories:
     - $HOME/nest-2.20.0
