fix/debug Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ before_install:
   - sudo apt-get install -y libgsl0-dev openmpi-bin libopenmpi-dev python-dev
 install:
   - source ci/install.sh
-script:
-  - bash ci/test_script.sh
+script:  bash ci/test_script.sh
 after_success:
   - bash ci/upload_coveralls.sh
 cache:
