Launch tests from test subdirectory to ensure we use the installed version of PyNN

--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -40,4 +40,5 @@ jobs:
         python setup.py install
     - name: Run unit tests
       run: |
-        nosetests --nologcapture -v test/unittests
+        cd test
+        nosetests --nologcapture -v unittests
