--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.9"]
-        os: ["ubuntu-latest", ]
+        os: ["ubuntu-latest", "windows-latest"]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -33,6 +33,7 @@ jobs:
       run: |
         python -m pip install brian2
     - name: Install NEURON
+      if: startsWith(matrix.os, 'ubuntu')
       run: |
         python -m pip install neuron
     - name: Install PyNN itself
