--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   test:
     name: Test on ${{ matrix.os }} with Python ${{ matrix.python-version }}
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
