try to get tests to run properly on Windows

--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -40,6 +40,6 @@ jobs:
       run: |
         python setup.py install
     - name: Run unit tests
+      working-directory: ./test
       run: |
-        cd test
         nosetests --nologcapture -v unittests
