still fiddling with getting tests to run on Windows runner

--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -42,4 +42,4 @@ jobs:
     - name: Run unit tests
       working-directory: test
       run: |
-        nosetests --nologcapture -v unittests
+        nosetests --nologcapture --exe --verbosity=3 unittests
