--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -40,6 +40,6 @@ jobs:
       run: |
         python setup.py install
     - name: Run unit tests
-      working-directory: test
+      working-directory: test/unittests
       run: |
-        nosetests --nologcapture --exe --verbosity=3 unittests
+        nosetests --nologcapture --verbosity=3
