--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: python
-dist: bionic
+dist: focal
 matrix:
   include:
     - python: 3.7
@@ -17,7 +17,7 @@ after_success:
   - bash ci/upload_coveralls.sh
 cache:
   directories:
-    - $HOME/nest-3.0
-    - $HOME/nrn-8.0.0
-    - $HOME/build/nest-3.0
+    - $HOME/nest-simulator-3.3
+    - $HOME/nrn-8.1
+    - $HOME/build/nest-simulator-3.3
     - $HOME/.cache/pip
