--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -5,9 +5,9 @@ name: Run all tests
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches: [ master ]
   pull_request:
-    branches: [ $default-branch ]
+    branches: [ master ]
 
 jobs:
   test:
