--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -14,10 +14,10 @@ jobs:
     name: Test on ${{ matrix.os }} with Python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
-        python-version: ["3.8", "3.9"]
-        os: ["ubuntu-latest", "windows-latest"]
+        python-version: ["3.9"]
+        os: ["ubuntu-latest"]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
