--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -45,7 +45,8 @@ jobs:
       run: |
         python -m pip install cython
         wget https://github.com/nest/nest-simulator/archive/refs/tags/v3.3.tar.gz -O $HOME/nest-simulator-3.3.tar.gz
-        tar xzf $HOME/nest-simulator-3.3.tar.gz
+        pwd
+        tar xzvf --directory $HOME $HOME/nest-simulator-3.3.tar.gz
         ls $HOME
         cmake -DCMAKE_INSTALL_PREFIX=$HOME/.local -Dwith-mpi=ON $HOME/nest-simulator-3.3
         make
