--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -32,6 +32,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install coverage coveralls nose-testconfig
+        python -m pip install mpi4py
         python -m pip install -r requirements.txt
     - name: Install Brian 2
       run: |
@@ -45,8 +46,7 @@ jobs:
       run: |
         python -m pip install cython
         wget https://github.com/nest/nest-simulator/archive/refs/tags/v3.3.tar.gz -O nest-simulator-3.3.tar.gz
-        tar xzvf nest-simulator-3.3.tar.gz
-        ls
+        tar xzf nest-simulator-3.3.tar.gz
         cmake -DCMAKE_INSTALL_PREFIX=$HOME/.local -Dwith-mpi=ON ./nest-simulator-3.3
         make
         make install
@@ -55,7 +55,7 @@ jobs:
         python setup.py install
     - name: Run unit tests
       run: |
-        nosetests --nologcapture --where=test/unittests --verbosity=3 test_assembly.py test_brian.py test_connectors_parallel.py test_connectors_serial.py test_core.py test_descriptions.py test_files.py test_idmixin.py test_lowlevelapi.py test_neuron.py test_parameters.py test_population.py test_populationview.py test_projection.py test_random.py test_recording.py test_simulation_control.py test_space.py test_standardmodels.py test_utility_functions.py
+        nosetests --nologcapture --where=test/unittests --verbosity=3 test_assembly.py test_brian.py test_connectors_parallel.py test_connectors_serial.py test_core.py test_descriptions.py test_files.py test_idmixin.py test_lowlevelapi.py test_nest.py test_neuron.py test_parameters.py test_population.py test_populationview.py test_projection.py test_random.py test_recording.py test_simulation_control.py test_space.py test_standardmodels.py test_utility_functions.py
     - name: Run system tests
       run: |
-        nosetests --nologcapture --where=test/system test_brian2.py test_neuron.py
+        nosetests --nologcapture --where=test/system test_nest.py test_brian2.py test_neuron.py
