--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -40,7 +40,8 @@ jobs:
     - name: Install NEURON
       if: startsWith(matrix.os, 'ubuntu')
       run: |
-        python -m pip install neuron nrnutils
+        python -m pip install neuron
+        python -m pip install nrnutils
     - name: Install NEST
       if: startsWith(matrix.os, 'ubuntu')
       run: |
