--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.8", "3.9"]
+        python-version: ["3.8", "3.9", "3.10"]
         os: ["ubuntu-latest", "windows-latest"]
     steps:
     - uses: actions/checkout@v2
@@ -40,7 +40,7 @@ jobs:
     - name: Install NEURON
       if: startsWith(matrix.os, 'ubuntu')
       run: |
-        python -m pip install neuron==8.1.0
+        python -m pip install neuron==8.2.1
         python -m pip install nrnutils
     - name: Install NEST
       if: startsWith(matrix.os, 'ubuntu')
