--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Install basic Python dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install coverage coveralls nose-testconfig
+        python -m pip install coveralls pytest pytest-cov
         python -m pip install mpi4py
         python -m pip install -r requirements.txt
     - name: Install Brian 2
@@ -54,9 +54,6 @@ jobs:
     - name: Install PyNN itself
       run: |
         python setup.py install
-    - name: Run unit tests
+    - name: Run unit and system tests
       run: |
-        nosetests --nologcapture --where=test/unittests --verbosity=2 test_assembly.py test_brian.py test_connectors_parallel.py test_connectors_serial.py test_core.py test_descriptions.py test_files.py test_idmixin.py test_lowlevelapi.py test_nest.py test_neuron.py test_parameters.py test_population.py test_populationview.py test_projection.py test_random.py test_recording.py test_simulation_control.py test_space.py test_standardmodels.py test_utility_functions.py
-    - name: Run system tests
-      run: |
-        nosetests --nologcapture --where=test/system --verbosity=2 test_nest.py test_brian2.py test_neuron.py
+        pytest -v --cov=pyNN test
