--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Install basic Python dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install coveralls pytest pytest-cov
+        python -m pip install pytest pytest-cov
         python -m pip install mpi4py
         python -m pip install -r requirements.txt
     - name: Install Brian 2
@@ -57,3 +57,21 @@ jobs:
     - name: Run unit and system tests
       run: |
         pytest -v --cov=pyNN test
+    - name: Upload coverage data
+      run: coveralls --service=github
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        COVERALLS_FLAG_NAME: ${{ matrix.test-name }}
+        COVERALLS_PARALLEL: true
+  coveralls:
+    name: Indicate completion to coveralls.io
+    needs: test
+    runs-on: ubuntu-latest
+    container: python:3-slim
+    steps:
+    - name: Finished
+      run: |
+        pip3 install --upgrade coveralls
+        coveralls --service=github --finish
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
