--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -16,8 +16,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.8", "3.9"]
-        os: ["ubuntu-latest", "windows-latest"]
+        python-version: ["3.8"] #, "3.9"]
+        os: ["ubuntu-latest"]  #, "windows-latest"]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
