--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -54,6 +54,9 @@ jobs:
     - name: Install PyNN itself
       run: |
         pip install -e .
+        pushd pyNN/neuron/nmodl
+        nrnivmodl
+        popd
     - name: Run unit and system tests
       run: |
         pytest -v --cov=pyNN --cov-report=term --cov-report=lcov --cov-report=xml test
