--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -16,8 +16,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.8"] #, "3.9"]
-        os: ["ubuntu-latest"]  #, "windows-latest"]
+        python-version: ["3.8", "3.9"]
+        os: ["ubuntu-latest", "windows-latest"]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -59,10 +59,9 @@ jobs:
         popd
     - name: Run unit and system tests
       run: |
-        pytest -v --cov=pyNN --cov-report=term --cov-report=lcov --cov-report=xml test
+        pytest -v --cov=pyNN --cov-report=term test
     - name: Upload coverage data
       run: |
-        ls -al
         coveralls --service=github
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -77,7 +76,6 @@ jobs:
     - name: Finished
       run: |
         pip3 install --upgrade coveralls
-        ls -al
         coveralls --service=github --finish
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
