--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
   {name = "The PyNN team", email = "pynn-maintainers@protonmail.com"}
 ]
 maintainers = [
-  {name = "Andrew Davison", email = "andrew.davison@cnrs.fr"}
+  {name = "The PyNN team", email = "pynn-maintainers@protonmail.com"}
 ]
 keywords = ["computational neuroscience, simulation, neuron, nest, brian2, neuromorphic"]
 classifiers = [
