--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -54,6 +54,13 @@ jobs:
     - name: Install PyNN itself
       run: |
         pip install -e .
+    - name: Test installation has worked
+      # this is needed because the PyNN tests are just skipped if the simulator
+      # fails to install, so we need to catch import failures separately
+      run: |
+        python -c "import pyNN.nest"
+        python -c "import pyNN.neuron"
+        python -c "import pyNN.brian2"
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
