--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ neo>=0.11.0
 #git+https://github.com/NeuralEnsemble/python-neo.git@master#egg=neo
 setuptools>=20.5
 h5py
+pandas  # needed for NEST v3.5
