--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
+include pyNN/arbor/nmodl/*.mod
 include pyNN/neuron/nmodl/*.mod
 include pyNN/nest/extensions/*.h
 include pyNN/nest/extensions/*.cpp
