--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,8 @@ dependencies = [
   "lazyarray>=0.5.2",
   "neo>=0.11.0",
   "quantities>=0.12.1",
-  "morphio"
+  "morphio",
+  "libNeuroML==0.4.1"
 ]
 
 [project.optional-dependencies]
