update CI to use NEST 3.6 final release

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,6 @@ neo>=0.11.0
 #git+https://github.com/NeuralEnsemble/python-neo.git@master#egg=neo
 setuptools>=20.5
 h5py
-git+https://github.com/NeuralEnsemble/libNeuroML@development#egg=libneuroml
+#git+https://github.com/NeuralEnsemble/libNeuroML@development#egg=libneuroml
+libNeuroML==0.4.1
 morphio
