--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -46,9 +46,9 @@ jobs:
       if: startsWith(matrix.os, 'ubuntu')
       run: |
         python -m pip install cython
-        wget https://github.com/nest/nest-simulator/archive/refs/tags/v3.6-rc2.tar.gz -O nest-simulator-3.6-rc2.tar.gz
-        tar xzf nest-simulator-3.6-rc2.tar.gz
-        cmake -DCMAKE_INSTALL_PREFIX=$HOME/.local -Dwith-mpi=ON ./nest-simulator-3.6-rc2
+        wget https://github.com/nest/nest-simulator/archive/refs/tags/v3.6.tar.gz -O nest-simulator-3.6.tar.gz
+        tar xzf nest-simulator-3.6.tar.gz
+        cmake -DCMAKE_INSTALL_PREFIX=$HOME/.local -Dwith-mpi=ON ./nest-simulator-3.6
         make
         make install
     - name: Install PyNN itself
