--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
   "neo>=0.11.0",
   "quantities>=0.12.1",
   "morphio",
-  "libNeuroML==0.4.1"
+  "libNeuroML>=0.4.1"
 ]
 
 [project.optional-dependencies]
