--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.8", "3.10"]
+        python-version: ["3.8", "3.10", "3.12"]
         os: ["ubuntu-latest", "windows-latest"]
     steps:
     - uses: actions/checkout@v2
