--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -32,8 +32,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install pytest pytest-cov coveralls flake8
-        python -m pip install -r requirements.txt
-        python -m pip install mpi4py matplotlib
     - name: Install Brian 2
       run: |
         python -m pip install brian2
@@ -53,7 +51,7 @@ jobs:
         make install
     - name: Install PyNN itself
       run: |
-        pip install -e .
+        pip install -e ".[test]"
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
