--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -37,7 +37,7 @@ jobs:
         python -m pip install brian2
     - name: Install NEURON
       run: |
-        python -m pip install neuron==8.2.4
+        python -m pip install NEURON==8.2.4
         python -m pip install "nrnutils>0.2.0"
     - name: Install NEST
       if: startsWith(matrix.os, 'ubuntu')
