--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -20,6 +20,7 @@ jobs:
         os: ["ubuntu-latest", "windows-latest"]
     steps:
     - uses: actions/checkout@v4
+    - uses: mpi4py/setup-mpi@v1
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
