--- a/.github/workflows/full-test.yml
+++ b/.github/workflows/full-test.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Install basic Python dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pytest pytest-cov coveralls flake8 "setuptools<=75.8.2"
+        python -m pip install pytest pytest-cov coveralls flake8 "setuptools<=75.8.2" "numpy<2"
     - name: Install Brian 2
       run: |
         python -m pip install brian2
